# Bimanual-Teleop

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
config/: rig.yaml
docs/: ARCHITECTURE.md  REPLAY_LIBRARY.md  RESTING_POSE.md  SESSION_NOTES.md  UNITY_BRIDGE.md
replay_library/: README.md  clap.calib.json  fingers.calib.json  pick_place.calib.json  reach_box.calib.json  roll_right_left.calib.json  roll_right_left.npz  wrist_swing.calib.json
scripts/: analyze_session.py  check_body_relative.py  check_body_relative_render.py  check_no_mujoco_runtime.py  check_quest.py  check_rig_contract.py  check_roll.py  check_unity_contract.py  check_yam_geometry.py  dashboard.py  doctor.py  headset_view.py  jog_arms.py  render_monitor.py  render_session.py  run_hands.py  run_headset.py  run_synthetic.py  run_unity_validation.py  trim_session.py  update_unity_fixture.py  vendor_orcahand.py  verify_stack.py  vr_setup.sh  vr_tunnel.sh
src/bimanual_teleop/: __init__.py  config.py  control_server.py  engine.py  filters.py  hardware.py  logging_utils.py  render_sink.py
src/bimanual_teleop/arms/: arm_control.py  ik.py  yam_driver.py  yam_pin.py
src/bimanual_teleop/bus/: topics.py  zmq_io.py
src/bimanual_teleop/hands/: hand_control.py  joint_map.py  quest_retarget.py  real_driver.py  retarget_core.py
src/bimanual_teleop/launch/: run_hw.py  run_sim.py  run_teleop.py
src/bimanual_teleop/safety/: anchor_guard.py  clutch.py  separation.py  shaper.py  states.py  supervisor.py
src/bimanual_teleop/sim/: model.py  sim_world.py
src/bimanual_teleop/sim/models/orcahand_v2/: README.md  hand_config_right.yaml
src/bimanual_teleop/sim/models/orcahand_v2/models/assets/left/: I-AP-L.stl  I-FingerTipAssembly.stl  I-FingerTipAssembly_I-DP-Skin.stl  I-IP_IP.stl  I-L-Assembly.stl  I-PP_Skin.stl  L-Carpals.stl  L-T-AP.stl  M-FingerTipAssembly.stl  M-IP_IP.stl  M-PP.stl  M-PP_PP.stl  P-AP.stl  P-Assembly.stl  P-FingerTipAssembly.stl  P-FingerTipAssembly_P-DP-Skin.stl  P-PP.stl  P-PP_PP.stl  P-PP_Skin.stl  T-DP_T-DP.stl  T-L-Assembly.stl  T-PP_PP.stl  T-TP-L.stl  TopTower-Model.stl
src/bimanual_teleop/sim/models/orcahand_v2/models/assets/right/: ForeArmStructure-Model.stl  I-AP-R.stl  I-PP.stl  (+16 more)
src/bimanual_teleop/sim/models/orcahand_v2/models/mjcf/: orcahand_left.mjcf  orcahand_right.mjcf
src/bimanual_teleop/sim/models/yam/: yam.xml
src/bimanual_teleop/sim/models/yam_real/mjcf/: yam_left.mjcf  yam_left_body.xml  yam_right.mjcf  yam_right_body.xml
src/bimanual_teleop/tools/: frame_check.py  head_map.py  joint_jog.py  mapping_studio.py  mapping_viz.py
src/bimanual_teleop/viz/: hand_geom.py  live_viz.py  overlay.py  rerun_log.py  yam_meshes.py
src/bimanual_teleop/vr/: calibrate.py  frames.py  ingest.py  neutral_calib.py  orbit_source.py  orbit_viz.py  replay.py  vuer_source.py
tests/: test_anchor_guard.py  test_calib_quality.py  test_check_quest.py  test_dashboard_page_js.py  test_doctor.py  test_filters.py  test_frames.py  test_guardrails.py  test_ik.py  test_jog_dashboard.py  test_neutral_calib.py  test_no_mujoco_runtime.py  test_observability.py  test_orbit_anchor.py  test_pipeline.py  test_render_monitor.py  test_replay.py  test_rig_contract.py  test_session_embed.py  test_shaper.py  test_synthetic.py  test_unity_contract.py  test_unity_validation_runner.py  test_verify_stack.py  test_viz.py
unity/TeleopRenderer/: README.md
unity/TeleopRenderer/Assets/Editor/: TeleopEditorValidation.cs  TeleopSceneAsset.cs  render_state_sample.json
unity/TeleopRenderer/Assets/Scripts/: OperatorVectorRenderer.cs  OrcaHandRenderer.cs  TeleopRenderClient.cs  TeleopSceneBootstrap.cs  TeleopStatusHud.cs  TeleopUnityFrame.cs  TeleopUnityMaterials.cs  YamArmRenderer.cs
