[project]
name = "bimanual-teleop"
version = "0.1.0"
description = "VR (Quest 3) teleoperation for a bimanual torso humanoid: two i2rt YAM arms + two ORCA hands. Headless Pinocchio/pink runtime with a Unity render stream and hardware-ready sinks."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1",
    "pyzmq>=26",            # multi-process bus (PUB/SUB, latest-value via CONFLATE)
    "msgpack>=1.0",         # compact message encoding on the bus
    "loop-rate-limiters>=0.1",  # fixed-rate control loops
    "pyyaml>=6",
    "orca-core",            # real ORCA hand driver + 17-joint config (degrees); editable sibling
    "pin>=4.0",
    "pin-pink>=4.2",
    "daqp>=0.8.7",
]

[project.optional-dependencies]
# VR ingest (Quest 3 over WebXR). Heavier/churny dep, isolated so the core runtime stays lean.
vr = ["vuer>=0.0.32"]
# Telemetry backbone (spec Section 6): live 3D-transform + scalar-timeseries
# dashboard. Optional so the core runtime stays lean and headless CI needs nothing
# extra; viz/rerun_log.py degrades to a no-op when it is absent.
# fast-simplification: quadric mesh decimation for the dense ORCA hand STLs in
# the dashboard/GIF renderers (graceful fallback to crude decimation if absent).
telemetry = ["rerun-sdk>=0.20", "fast-simplification>=0.1.7"]
# Real YAM arms are Linux-only (SocketCAN). Install the i2rt SDK manually on the Linux host:
#   git clone https://github.com/i2rt-robotics/i2rt && uv pip install -e i2rt   (Ubuntu, Python 3.11)
# hardware = ["i2rt"]   # not on PyPI; see README "Hardware day".

# Dev/test tooling. uv installs dependency-groups into the `uv run` env by default,
# so the DoD command `uv run pytest` works without extra flags.
[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = true

[tool.uv.sources]
orca-core = { path = "../orca_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bimanual_teleop"]
